[tool.poetry]
name = "wretchedselfassuredorder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pymongo = "^3.11.0"
dnspython = "^2.0.0"
validator-collection = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
